Fix spacing on Salary page. Minor aesthetic changes to SalaryEntry and EventEntry

--- a/src/styles/EventDetails.css
+++ b/src/styles/EventDetails.css
@@ -6,10 +6,10 @@
     display: flex;
     flex-direction: column;
     justify-items: center;
+    /* max-width: 800px; */
 }
 
 .event-details-container {
-    height: fit-content;
     border: 3px solid #0ba3c1;
     text-align: left;
     padding: 30px 0px;
