--- a/src/styles/SalaryEntry.css
+++ b/src/styles/SalaryEntry.css
@@ -1,11 +1,12 @@
 .salary-card-container {
-    max-width: 400px;
+    max-width: 350px;
     margin-bottom: 30px 0px;
     border-color: #00671a;
     border-style: solid; 
     border-width: 2px;
     border-radius: 10px;
     box-shadow: -10px 7px 7px #00671a;
+    margin: 30px 0px;
 }
 
 .salary-card-col {  
@@ -16,10 +17,18 @@
 
 .salary-card {
     padding: 5px 20px;
-    margin: 0px;
+}
+
+.salary-card p {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .salary-card-title {
     color: #00cc33;
     font-size: 20px;
+}
+
+.salary-card-company {
+    color: #e7165f;;
 }
