--- a/src/styles/SalaryList.css
+++ b/src/styles/SalaryList.css
@@ -24,5 +24,5 @@
 
 .salary-grid {
     display: inline-block;
-    width: 400px; 
+    width: 350px; 
 }
